@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5484 2004/04/08 13:42:55 recht Exp $
+$NetBSD: CHANGES,v 1.5485 2004/04/08 14:29:49 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1846,3 +1846,5 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated memtest86 to 3.1a [ben 2004-04-08]
 	Added gmime-2.1.3 [recht 2004-04-08]
 	Added columba-1.0M2 [xtraeme 2004-04-08]
+	Updated pkg_chk to 1.46 [abs 2004-04-08]
+
